# 3Dmotion

./: .gitignore  .gitmodules  Context.md  README.md  requirements.txt
configs/: bracelet.yaml  cameras.yaml  capture.yaml  frames.yaml  imu_calibration.yaml  sensors.yaml  world_tags.yaml
configs/mola/: replay.yaml
configs/openvins/: head_vio.yaml
configs/openvins/generated_head_vio/: estimator_config.yaml  kalibr_imu_chain.yaml  kalibr_imucam_chain.yaml  openvins_config_summary.json
data/examples/: README.md
docs/: README.md  architecture.md  calibration.md  camera_pipeline_comparison.md  camera_resolution_fps_selection.md  coordinate_frames.md  data_schema.md  hand_sensor_position_requirements.md  prototype_plan.md  system_workflow.md  timestamp_sync.md  world_anchor_workflow.md
notebooks/: README.md
project_tests/: README.md
project_tests/sensor_position/: README.md  candidate_matrix.csv  scorecard_template.md  session_log_template.csv
project_tests/session_quality/: README.md  check_session_quality.py
ros2_ws/: README.md
ros2_ws/src/vimas_motion_bringup/: CMakeLists.txt  README.md  package.xml
ros2_ws/src/vimas_motion_bringup/launch/: head_vio_rviz.launch.py  motion_live_rviz.launch.py  motion_replay_rviz.launch.py
ros2_ws/src/vimas_motion_bringup/rviz/: head_vio.rviz
ros2_ws/src/vimas_motion_bringup/scripts/: head_vio_visualizer.py  motion_replay_visualizer.py
ros2_ws/src/vimas_motion_interfaces/: CMakeLists.txt  README.md  package.xml
ros2_ws/src/vimas_motion_interfaces/msg/: MotionFrame.msg  RigidBodyState.msg
scripts/: README.md  capture_dashboard.py  capture_imu_jsonl.py  capture_quad_camera.py  check_bracelet_orientation.py  check_calibration_readiness.py  check_camera_capture.py  check_head_vio_readiness.py  check_imu_live.py  filter_motion_frame.py  fuse_motion_session.py  generate_apriltag_grid.py  generate_apriltag_marker.py  generate_openvins_config.py  head_vio_rviz_ros2.bash  list_cameras.py  postprocess_session.py  prepare_euroc_openvins_session.py  prepare_openvins_session.py  prepare_p3_head_vio.py  process_apriltag_session.py  process_dashboard_session.py  process_euroc_openvins_stereo_ros2.bash  process_head_vio_session.py  process_head_vio_session_ros2.bash  process_head_vio_session_rosfree.py  process_world_anchor_session.py  replay_openvins_session_ros2.py  session_replay_publisher.py  session_replay_publisher_ros2.bash  source_openvins_ros2.bash  sweep_openvins_timeshift.py  validate_session.py  write_openvins_rosbag2.py
tests/: README.md  test_session_pipeline.py
(+4 files in other folders)
