<?xml version="1.0"?>
<package format="3">
  <name>vimas_motion_bringup</name>
  <version>0.0.0</version>
  <description>Bringup package for the 3D Motion prototype.</description>
  <maintainer email="todo@example.com">TODO</maintainer>
  <license>TODO</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

