<?xml version="1.0"?>
<package format="3">
  <name>vimas_motion_bringup</name>
  <version>0.0.0</version>
  <description>Bringup package for the 3D Motion prototype.</description>
  <maintainer email="todo@example.com">TODO</maintainer>
  <license>TODO</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
